// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GreenFlag Container renders active state 1`] = `
<img
  className="undefined"
  draggable={false}
  onClick={[Function]}
  src="test-file-stub"
  title="Go"
/>
`;

exports[`GreenFlag Container renders inactive state 1`] = `
<img
  className=""
  draggable={false}
  onClick={[Function]}
  src="test-file-stub"
  title="Go"
/>
`;
